<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="takepic">Camera</string>
    <string name="opengallery">Gallery</string>
    <string name="pickgallery">Choose</string>
    <string name="phones">Phones</string>
    <string name="emails">E-mails</string>
    <string name="social_networks">Social Networks</string>
    <string name="others">Others</string>
    <string name="app_name">ivi</string>
    <string name="applicationId">243137495823972</string>
    <string name="action_settings">Settings</string>
    <string name="RegisteredEmailsHeader">Registered</string>
    <string name="AddNewEmailHeader">Add new</string>
    <string name="Email">E-mail:</string>
    <string name="EmailHint">Ex. john@provider.com</string>
    <string name="Othercontacts">Other contacts</string>
    <string name="Password">Your Password</string>
    <string name="Login">Login</string>
    <string name="UserName">Your name</string>
    <string name="PhoneNumber">Ex. (41) 9999-9999</string>
    <string name="Website">Ex. www.example.com</string>
    <string name="SelectProfilePicText">Select or take a new Picture</string>
    <string name="Register">Register</string>
    <string name="LogoDescription">Application Logo</string>
    <string name="RegisterText">If it is your first time, click here.</string>
    <string name="LoginText">If you already have a user, click here.</string>
    <string name="EmailErrorMessage1">E-mail Address format is incorrect.</string>
    <string name="EmailErrorMessage2">E-mail Address already registered.</string>
    <string name="EmailErrorMessage3">E-mail Address is not registered.</string>
    <string name="EmailErrorMessage4">Reached the limit of 5 e-mails registered.</string>
    <string name="PhoneErrorMessage1">Phone number format incorrect.</string>
    <string name="WebsiteErrorMessage1">Website format incorrect.</string>
    <string name="UserNameErrorMessage1">Invalid username.</string>
    <string name="PasswordErrorMessage1">A minimum password length of 4 to 8 characters.</string>
    <string name="ChangeScreenType">alterToRegister</string>
    <string name="CallForgotPassWindow">forgotMyPass</string>
    <string name="DefineLoginClick">defineLoginClick</string>
    <string name="CellPhoneOperator">CellphoneOperator</string>
    <string name="CellSimSerial">CellphoneSIMSerial</string>
    <string name="WebServiceErrorTitle1">Communication Error</string>
    <string name="WebServiceErrorMsg1">It appears that your connection to the server is no longer available. Please, verify your network connection.</string>
    <string name="WebServiceErrorTitle2">Fatal Error</string>
    <string name="WebServiceErrorMsg2">Oh my! a fatal error occurred.</string>
    <string name="ForgotMyPassText">I forgot my password&#8230;</string>
    <string name="LoginErrorTitle1">E-mail/password incorrect.</string>
    <string name="LoginErrorMsg1">The email/password you entered does not belong to any account.</string>
    <string name="ForgotPasswordDialogTitle">Password recovery</string>
    <string name="ForgotPasswordDialogMessage">Enter your registered e-mail:</string>
    <string name="ForgotPasswordDialogCancelBt">Cancel</string>
    <string name="ForgotPasswordDialogRecoverBt">Recover</string>
    <string name="NetworkUnavailableTitle">Connection not available</string>
    <string name="NetworkUnavailableMsg">To access this function you need to be connected to a network.</string>
    <string name="RecoverPassMsg">Your password was sent to your e-mail.</string>
    <string name="UnexpectedMsg">An unexpected error happened and the request was not completed.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="CloseFullPictureMessage">Click in the image to close.</string>
    <string name="ShareMessage">I have just started using Ivi, an application that easily connects you to the world, why don\'t you try it yourself?</string>
    <string name="ShareOptions">Where would you like to share?</string>
    <string name="LinkedinFailedMessage">A problem with your Linkedin logon was identified and you were not connected.</string>
    <string name="linkedin_loginview_logged_in_as">Logged in as: </string>
    <string name="linkedin_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="title_service_contactheads">ContactHeadsService</string>
    
    
    <!-- Facebook -->
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_facebook_profile_task">Facebook Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_twitter_fragment">TwitterFragment</string>
    <string name="title_activity_groups">GroupsActivity</string>

</resources>