
<RelativeLayout 
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_above="@+id/EditTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/LogoDescription"
        android:cropToPadding="false"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextEmail"
        android:layout_alignRight="@+id/EditTextEmail"
        android:layout_below="@+id/EditTextEmail"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/progressBar1"
        
        android:layout_toRightOf="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/EditTextPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextPassword"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_below="@+id/EditTextPassword"
        android:layout_marginTop="18dp"
        android:onClick="@string/DefineLoginClick"
        android:text="@string/Login"
        android:textSize="@dimen/buttonFontSize" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="@string/ChangeScreenType"
        android:text="@string/RegisterText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="@string/CallForgotPassWindow"
        android:text="@string/ForgotMyPassText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="italic" />

</RelativeLayout>